generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  USER
  ADMIN
}

model User {
  id            String    @id @default(cuid())
  email         String    @unique
  username      String    @unique
  password      String?
  emailVerified DateTime?
  displayName   String?
  bio           String?
  location      String?
  job           String?
  website       String?
  img           String?
  cover         String?
  role          Role      @default(USER)
  banned        Boolean   @default(false)
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  // RELATIONS
  posts Post[]

  likes Like[]

  saves SavedPosts[]

  followers  Follow[] @relation("UserFollowers")
  followings Follow[] @relation("UserFollowings")

  accounts Account[]
  sessions Session[]

  comments     Comment[]
  commentLikes CommentLike[]

  receivedNotifications Notification[] @relation("ReceivedNotifications")
  sentNotifications     Notification[] @relation("SentNotifications")

  blockerRelations Block[] @relation("BlockerUser")
  blockedRelations Block[] @relation("BlockedUser")
  reports          Report[]

  conversationMembers ConversationMember[]
  sentMessages        Message[]

  mentions Mention[]

  communities  CommunityMember[]
  bannedFrom   CommunityBannedUser[]
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String? @db.Text
  access_token      String? @db.Text
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.Text
  session_state     String?
  user              User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

model Post {
  id          Int       @id @default(autoincrement())
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  deletedAt   DateTime?
  desc        String?   @db.VarChar(255)
  isSensitive Boolean   @default(false)
  isApproved  Boolean   @default(true)

  // RELATIONS
  user   User   @relation(fields: [userId], references: [id])
  userId String

  media PostMedia[]

  rePostId Int?
  rePost   Post?  @relation("RePosts", fields: [rePostId], references: [id])
  rePosts  Post[] @relation("RePosts")

  parentPostId Int?
  parentPost   Post?  @relation("PostComments", fields: [parentPostId], references: [id])
  postReplies  Post[] @relation("PostComments")

  comments Comment[]

  likes Like[]

  saves SavedPosts[]

  tags PostTag[]

  mentions Mention[]

  notifications Notification[]
  reports       Report[]

  communityId Int?
  community   Community? @relation(fields: [communityId], references: [id])
}

model Hashtag {
  id        Int       @id @default(autoincrement())
  tag       String    @unique
  createdAt DateTime  @default(now())

  posts PostTag[]
}

model PostTag {
  postId    Int
  hashtagId Int

  post    Post    @relation(fields: [postId], references: [id])
  hashtag Hashtag @relation(fields: [hashtagId], references: [id])

  @@id([postId, hashtagId])
}

model Like {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now())

  // RELATIONS
  userId String
  postId Int

  user User @relation(fields: [userId], references: [id])
  post Post @relation(fields: [postId], references: [id])
}

model SavedPosts {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now())

  // RELATIONS
  userId String
  postId Int

  user User @relation(fields: [userId], references: [id])
  post Post @relation(fields: [postId], references: [id])
}

enum NotificationType {
  LIKE
  REPLY
  REPOST
  FOLLOW
  MENTION
  COMMUNITY_MOD_ADDED
  COMMUNITY_POST
  COMMUNITY_NEW_POST
  REPORT
}

model Notification {
  id          Int              @id @default(autoincrement())
  type        NotificationType
  recipientId String
  actorId     String
  postId      Int?
  commentId   Int?
  readAt      DateTime?
  createdAt   DateTime         @default(now())

  recipient User     @relation("ReceivedNotifications", fields: [recipientId], references: [id])
  actor     User     @relation("SentNotifications",     fields: [actorId],     references: [id])
  post      Post?    @relation(fields: [postId], references: [id])
  comment   Comment? @relation(fields: [commentId], references: [id])
}

model Follow {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now())
  notify    Boolean  @default(false)

  // RELATIONS
  followerId  String
  followingId String

  follower  User @relation("UserFollowers", fields: [followerId], references: [id])
  following User @relation("UserFollowings", fields: [followingId], references: [id])
}

model Block {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now())

  blockerId String
  blockedId String

  blocker User @relation("BlockerUser", fields: [blockerId], references: [id])
  blocked User @relation("BlockedUser", fields: [blockedId], references: [id])

  @@unique([blockerId, blockedId])
}

enum ReportStatus {
  OPEN
  CLOSED
}

model Report {
  id        Int          @id @default(autoincrement())
  createdAt DateTime     @default(now())
  reason    String
  status    ReportStatus @default(OPEN)

  reporterId String
  postId     Int

  reporter User @relation(fields: [reporterId], references: [id])
  post     Post @relation(fields: [postId], references: [id])
}

model Conversation {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  members  ConversationMember[]
  messages Message[]
}

model ConversationMember {
  conversationId Int
  userId         String
  lastReadAt     DateTime @default(now())

  conversation Conversation @relation(fields: [conversationId], references: [id])
  user         User         @relation(fields: [userId], references: [id])

  @@id([conversationId, userId])
}

model Message {
  id             Int      @id @default(autoincrement())
  conversationId Int
  senderId       String
  body           String?  @db.VarChar(1000)
  mediaUrl       String?
  createdAt      DateTime @default(now())

  conversation Conversation @relation(fields: [conversationId], references: [id])
  sender       User         @relation(fields: [senderId], references: [id])
}

model PostMedia {
  id        Int      @id @default(autoincrement())
  url       String
  type      String   // 'IMAGE' | 'VIDEO' | 'FILE'
  height    Int?
  width     Int?
  postId    Int
  post      Post     @relation(fields: [postId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
}

enum CommunityRole {
  MEMBER
  MOD
  OWNER
}

model Community {
  id          Int      @id @default(autoincrement())
  name        String
  slug        String   @unique
  description String?  @db.VarChar(255)
  img         String?
  cover       String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  members CommunityMember[]
  posts   Post[]
  rules   CommunityRule[]
  bans    CommunityBannedUser[]
}

model CommunityMember {
  id          Int           @id @default(autoincrement())
  role        CommunityRole @default(MEMBER)
  createdAt   DateTime      @default(now())

  userId      String
  communityId Int

  user      User      @relation(fields: [userId], references: [id])
  community Community @relation(fields: [communityId], references: [id])

  @@unique([userId, communityId])
}

model CommunityRule {
  id          Int      @id @default(autoincrement())
  title       String
  description String?  @db.VarChar(500)
  communityId Int
  community   Community @relation(fields: [communityId], references: [id])
}

model CommunityBannedUser {
  id          Int      @id @default(autoincrement())
  createdAt   DateTime @default(now())
  reason      String?

  userId      String
  communityId Int

  user      User      @relation(fields: [userId], references: [id])
  community Community @relation(fields: [communityId], references: [id])

  @@unique([userId, communityId])
}

model Comment {
  id        Int       @id @default(autoincrement())
  body      String    @db.VarChar(1000)
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  userId String
  user   User   @relation(fields: [userId], references: [id])

  postId Int
  post   Post @relation(fields: [postId], references: [id], onDelete: Cascade)

  parentCommentId Int?
  parentComment   Comment?  @relation("CommentReplies", fields: [parentCommentId], references: [id])
  replies         Comment[] @relation("CommentReplies")

  media         CommentMedia[]
  likes         CommentLike[]
  mentions      Mention[]
  notifications Notification[]
}

model CommentMedia {
  id        Int      @id @default(autoincrement())
  url       String
  type      String   // 'IMAGE' | 'VIDEO' | 'FILE'
  height    Int?
  width     Int?

  commentId Int
  comment   Comment  @relation(fields: [commentId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
}

model CommentLike {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now())

  userId    String
  commentId Int

  user    User    @relation(fields: [userId], references: [id])
  comment Comment @relation(fields: [commentId], references: [id], onDelete: Cascade)

  @@unique([userId, commentId])
}

model Mention {
  id        Int      @id @default(autoincrement())
  createdAt DateTime @default(now())

  postId    Int?
  post      Post?    @relation(fields: [postId], references: [id], onDelete: Cascade)

  commentId Int?
  comment   Comment? @relation(fields: [commentId], references: [id], onDelete: Cascade)

  userId    String
  user      User @relation(fields: [userId], references: [id])

  username  String
}
